added hcard input preview using js

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="hcard-row">
                             <span class="title">Phone</span>
-                            <span class="hcard-field" id="hcard-email"></span>
+                            <span class="hcard-field" id="hcard-phone"></span>
                         </div>
                         <div class="hcard-row">
                             <span class="title">Address</span>
