added responsive design, README info

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="column"><!-- column left start -->
+            <div class="column left"><!-- column left start -->
                 <div class="hcard-input">
                     <h1>hCard Builder</h1>
                     <form><!-- input form -->
                         <fieldset>
-                            <h4 class="heading"></h4>
+                            <h4 class="heading">Personal Details</h4>
                             <div class="field">
                                 <label for="givenname">Given Name</label>
                                 <input type="text" id="givenname" onkeyup="preview()" autofocus> <!-- onkeyup will trigger the preview function, preview() will get the text value of the user's input and save it into a variable which will be displayed on the ouput card -->
