--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                             </div>
                             <div class="field">
                                 <label for="email">Email</label>
-                                <input type="text" id="email" onkeyup="preview()">
+                                <input type="email" id="email" onkeyup="preview()">
                             </div>
                             <div class="field">
                                 <label for="phone">Phone</label>
-                                <input type="text" id="phone" onkeyup="preview()">
+                                <input type="tel" id="phone" onkeyup="preview()">
                             </div>
                         </fieldset>
 
@@ -56,7 +56,7 @@
                             </div>
                             <div class="field">
                                 <label for="postcode">Postcode</label>
-                                <input type="text" id="postcode" onkeyup="preview()">
+                                <input type="number" id="postcode" pattern="[0-9]" onkeyup="preview()">
                             </div>
                             <div class="field">
                                 <label for="country">Country</label>
